--- a/test.html
+++ b/test.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>첫 번째 배포</title>
+    <link rel="stylesheet" href="style.css">
+    <title>세 번째 배포</title>
 </head>
 <body>
-    <h2>첫 번째 배포입니다</h2>
+    <h2>세 번째 배포입니다</h2>
+    <img src="testimg/food.png" alt="문어사진">
 </body>
 </html>
